Fixed z-index issue in special page

--- a/modules/es/es.Surface.css
+++ b/modules/es/es.Surface.css
@@ -37,6 +37,7 @@
 
 .es-contentView {
 	position: relative;
+	z-index: 1;
 }
 
 .es-headingView,
